租房基本信息功能完善

--- a/src/main/webapp/pages/common/_container.html
+++ b/src/main/webapp/pages/common/_container.html
@@ -62,6 +62,7 @@ ${layoutContent}
 @/* js和业务用的js数组 */
 <script type="text/javascript" src="${ctxPath}/assets/common/layui/layui.js"></script>
 <script type="text/javascript" src="${ctxPath}/assets/common/js/common.js"></script>
+<script type="text/javascript" src="${ctxPath}/assets/common/js/custom.js"></script>
 
 <!--其他插件js-->
 @if(isNotEmpty(plugins)){
