--- a/src/main/webapp/pages/modular/rent/base/info/list.html
+++ b/src/main/webapp/pages/modular/rent/base/info/list.html
@@ -27,6 +27,69 @@
     </div>
 </div>
 
+<!--编辑弹出页面内容开始-->
+<script id="popupEdit" type="text/html">
+    <form id="rentEdit" lay-filter="rentEdit" class="layui-form model-form layui-row">
+        <input name="id" type="hidden"/>
+        <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+            <div class="layui-form-item">
+                <label class="layui-form-label">房租名称<span style="color: red;">*</span></label>
+                <div class="layui-input-block">
+                    <input name="rentingHouse" placeholder="请输入房租名称" type="text" class="layui-input" lay-verify="required" required autocomplete="off"/>
+                </div>
+            </div>
+        </div>
+        <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+            <div class="layui-form-item">
+                <label class="layui-form-label">房租规格<span style="color: red;">*</span></label>
+                <div class="layui-input-block">
+                    <input id="pid" name="pid" type="hidden">
+                    <input name="rentingUnit" placeholder="请输入房租规格" type="text" class="layui-input" lay-verify="required" required autocomplete="off"/>
+                </div>
+            </div>
+        </div>
+        <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+            <div class="layui-form-item">
+                <label class="layui-form-label">房租地址<span style="color: red;">*</span></label>
+                <div class="layui-input-block">
+                    <input name="rentingAdress" placeholder="请输入房租地址" type="text" class="layui-input" lay-verify="required" required autocomplete="off"/>
+                </div>
+            </div>
+        </div>
+        <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+            <div class="layui-form-item">
+                <label class="layui-form-label">租客姓名</label>
+                <div class="layui-input-block">
+                    <input name="tenantsName" placeholder="请输入租客姓名" type="text" class="layui-input"/>
+                </div>
+            </div>
+        </div>
+        <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+            <div class="layui-form-item">
+                <label class="layui-form-label">收租日期</label>
+                <div class="layui-input-block">
+                    <input name="rentingTime" readonly unselectable="on" type="text" class="layui-input date"/>
+                </div>
+            </div>
+        </div>
+        <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+            <div class="layui-form-item">
+                <label class="layui-form-label">收租金额</label>
+                <div class="layui-input-block">
+                    <input name="rentingPrice" placeholder="请输入收租金额" type="text" class="layui-input"/>
+                </div>
+            </div>
+        </div>
+        <div class="layui-form-item layui-col-xs12 layui-col-sm12 layui-col-md12">
+            <div class="layui-input-block">
+                <button type="submit" class="layui-btn" lay-submit="" lay-filter="submit">立即提交</button>
+                <button type="button" class="layui-btn layui-btn-normal" id="cancel">取消</button>
+            </div>
+        </div>
+    </form>
+</script>
+<!--编辑弹出页面内容结束-->
+
 <script type="text/html" id="tableBar">
     <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit">修改</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="delete">删除</a>
